--- a/tx_client/pom.xml
+++ b/tx_client/pom.xml
@@ -5,24 +5,17 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.tx</groupId>
-  <artifactId>tx</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>tx_manage</module>
-      <module>tx_client</module>
-      <module>demo</module>
-    </modules>
+  <artifactId>tx_client</artifactId>
+  <version>1.0-SNAPSHOT</version>
 
-    <name>tx</name>
+  <name>tx_client</name>
+
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
-
-
   <dependencies>
 
     <dependency>
@@ -31,11 +24,11 @@
       <version>2.4.0</version>
     </dependency>
 
-<!--    <dependency>
-      <groupId>cn.hutool</groupId>
-      <artifactId>hutool-core</artifactId>
-      <version>5.5.1</version>
-    </dependency>-->
+    <!--    <dependency>
+          <groupId>cn.hutool</groupId>
+          <artifactId>hutool-core</artifactId>
+          <version>5.5.1</version>
+        </dependency>-->
 
     <dependency>
       <groupId>com.baomidou</groupId>
@@ -82,8 +75,20 @@
       <version>1.18.16</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-all</artifactId>
+      <version>4.1.20.Final</version>
+    </dependency>
+
+    <dependency>
+      <groupId>com.google.protobuf</groupId>
+      <artifactId>protobuf-java</artifactId>
+      <version>3.5.1</version>
+    </dependency>
 
   </dependencies>
+
 
 
 </project>
