--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,11 @@
 
 
   <dependencies>
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.75</version>
+    </dependency>
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
