--- a/tx_client/pom.xml
+++ b/tx_client/pom.xml
@@ -86,6 +86,11 @@
       <artifactId>protobuf-java</artifactId>
       <version>3.5.1</version>
     </dependency>
+    <dependency>
+      <groupId>com.alibaba</groupId>
+      <artifactId>fastjson</artifactId>
+      <version>1.2.75</version>
+    </dependency>
 
   </dependencies>
 
