--- a/demo2/pom.xml
+++ b/demo2/pom.xml
@@ -19,6 +19,41 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+            <version>2.2.6.RELEASE</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.cloud</groupId>
+                    <artifactId>spring-cloud-starter</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter</artifactId>
+            <version>2.2.6.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+            <version>2.12.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.6</version>
+        </dependency>
+
+
+        <!--    <dependency>
+              <groupId>cn.hutool</groupId>
+              <artifactId>hutool-core</artifactId>
+              <version>5.5.1</version>
+            </dependency>-->
+
+        <dependency>
             <groupId>org.tx</groupId>
             <artifactId>tx_client</artifactId>
             <version>1.0-SNAPSHOT</version>
@@ -30,11 +65,6 @@
             <version>2.4.0</version>
         </dependency>
 
-        <!--    <dependency>
-              <groupId>cn.hutool</groupId>
-              <artifactId>hutool-core</artifactId>
-              <version>5.5.1</version>
-            </dependency>-->
 
         <dependency>
             <groupId>com.baomidou</groupId>
@@ -63,11 +93,6 @@
             <scope>test</scope>
         </dependency>
 
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid</artifactId>
-            <version>1.2.3</version>
-        </dependency>
 
         <dependency>
             <groupId>mysql</groupId>
@@ -83,6 +108,7 @@
         </dependency>
 
     </dependencies>
+
 
 
 </project>
