--- a/tx_client/pom.xml
+++ b/tx_client/pom.xml
@@ -43,11 +43,11 @@
       <version>4.1.20.Final</version>
     </dependency>
 
-    <dependency>
+<!--    <dependency>
       <groupId>com.google.protobuf</groupId>
       <artifactId>protobuf-java</artifactId>
       <version>3.5.1</version>
-    </dependency>
+    </dependency>-->
     <dependency>
       <groupId>com.alibaba</groupId>
       <artifactId>fastjson</artifactId>
