--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
   main:
     allow-bean-definition-overriding: true
   application:
-    name: yokea-demo
+    name: demo
 
 logging:
   level:
