--- a/demo2/src/main/resources/application.yml
+++ b/demo2/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
   main:
     allow-bean-definition-overriding: true
   application:
-    name: yokea-demo2
+    name: demo2
 
 logging:
   level:
