--- a/demo3/src/main/resources/application.yml
+++ b/demo3/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
   main:
     allow-bean-definition-overriding: true
   application:
-    name: yokea-demo3
+    name: demo3
 
 logging:
   level:
