--- a/demo3/pom.xml
+++ b/demo3/pom.xml
@@ -89,17 +89,19 @@
         </dependency>
 
 
+<!--
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
             <version>2.4.0</version>
         </dependency>
+-->
 
-        <dependency>
+<!--        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <version>2.4.0</version>
-        </dependency>
+        </dependency>-->
 
 
         <dependency>
