--- a/tx_client/pom.xml
+++ b/tx_client/pom.xml
@@ -53,6 +53,11 @@
       <artifactId>fastjson</artifactId>
       <version>1.2.75</version>
     </dependency>
+      <dependency>
+          <groupId>io.github.openfeign</groupId>
+          <artifactId>feign-core</artifactId>
+        <version>11.0</version>
+      </dependency>
 
   </dependencies>
 
